# ros_test

./: CMakeLists.txt  Dockerfile  README.md  main.py  package.xml  requirements.txt  run_docker.sh  turtlesim.sh
.devcontainer/: devcontainer.json
include/ros_test/: coordwarehouse.h  point.h  pose.h  turtle.h
input/: example.csv
src/: coordwarehouse.cpp  main.cpp  point.cpp  turtle.cpp
srv/: csv.srv
